Fixed CSS issues with overflow and scrollbar

--- a/public/global.css
+++ b/public/global.css
@@ -5,12 +5,21 @@ body {
     height: 100%;
 }
 
+html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+}
+
 body {
     color: #333;
     margin: 0;
     padding: 8px;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+body, main {
+    overflow-x: hidden;
 }
 
 a {
@@ -73,8 +82,13 @@ button:focus {
 main {
     padding: 1em;
     padding-top: 3px;
-    max-width: 60vw;
-    margin: 0 auto;
+}
+
+@media (min-width: 740px) {
+    main {
+        max-width: 60vw;
+        margin: 0 auto;
+    }
 }
 
 h1,
